fix: connect to local sql

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "knex": "^1.0.4",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
-    "objection": "^3.0.1"
+    "objection": "^3.0.1",
+    "pg": "^8.7.3"
   }
 }
